[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
version = "0.1.0"
name = "jam"
dependencies = ["pyqt6", "json5"]

[project.scripts]
jam = "jam:main"
jammenu ="jam:menu"
[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.mypy]
files = "src"
check_untyped_defs = true
